# rustcodex

./: .gitignore  Cargo.toml  README.md  build.rs  main.py
src/: cli.rs  host.rs  inout.rs  lang.rs  lib.rs  main.rs  source.rs
templates/: csharp.cs  fsharp.fs  go.go  java.java  kotlin.kt  python.py  scala.scala  shell.bash
