[package]
name = "rustcodex"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-or-later"

[lints.clippy]
correctness = "deny"
suspicious = "deny"
perf = "deny"
style = "deny"
complexity = "warn"
pedantic = "warn"
#nursery = "warn"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
