[package]
name = "rustcodex"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-or-later"

[lints.clippy]
correctness = "deny"
suspicious = "deny"
perf = "deny"
style = "deny"
complexity = "warn"
#pedantic = "warn"
#nursery = "warn"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
either = "1.13"
flate2 = "1.0"
terminator = { version = "0.3", features = ["anyhow"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.small]
inherits = "release"
opt-level = "z"
strip = true
