[package]
name = "rustcodex"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
build = "build.rs"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(generated)']

[lints.clippy]
correctness = "deny"
suspicious = "deny"
perf = "deny"
style = "deny"
complexity = "warn"
nursery = "warn"
#pedantic = "warn"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["cargo", "derive", "env", "string"] }
flate2 = "1.0"

[build-dependencies]
clap_complete = "4.5"
clap = { version = "4.5", features = ["cargo", "derive", "env", "string"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.small]
inherits = "release"
opt-level = "z"
strip = true
